# ant-auxiliary

./: Cargo.toml  Makefile.toml  README.md  ant-auxiliary.code-workspace  loop_back_test.py  openocd.cfg
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
microcontroller/: Cargo.toml  README.md  build.rs  main.py  memory.x  test.py
microcontroller/.cargo/: config.toml
microcontroller/client/: __init__.py  aux_pb2.py  aux_pb2.pyi
microcontroller/proto/: aux.proto
microcontroller/src/: build.rs  channel_stream.rs  dht11.rs  fan.rs  frequency.rs  iofuture.rs  light.rs  main.rs  mono.rs  network.rs  rpc.rs  seed.rs  serial.rs  shell.rs  statistics.rs  stream.rs
proto/: aux.proto
protocol/src/: lib.rs
src/: main.rs
