[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
name = "ant-auxiliary"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-hal-nb = { version = "1.0.0" }
stm32f4xx-hal = { version = "0.22.1",  features = [ "usb_fs", "stm32f411" ] }
stm32-usbd = { version = "0.7.0" }
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
rtic = { version = "2.1.2", features = [ "thumbv7-backend" ] }
nb = "1.1.0"
am2320 = { git = "https://github.com/davidji/am2320.rs.git", tag="0.3.0-rc.1" }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
rtic-monotonics = { version = "2.0.3", features = [ "cortex-m-systick" ]}
rtic-sync = "1.3.2"
heapless = "0.7.0"
postcard = "1.1.1"
arraydeque = { version = "0.5.1", default-features = false }
protocol = { path = "../protocol", version="0.1.0" } 
serde = { version = "1.0.219", default-features = false }
cobs = { version = "0.3.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features=["async-await"] }

# this lets you use `cargo fix`!
[[bin]]
name = "ant-auxiliary"
test = false
bench = false
