[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2021"
name = "ant-auxiliary"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0.1"
defmt-rtt = "1.0.0"

embedded-hal = { version = "1.0.0" }
embedded-hal-nb = { version = "1.0.0" }

panic-probe = { version = "1.0.0", features = [ "print-defmt" ] }

stm32f4xx-hal = { version = "0.22.1",  features = [ "usb_fs", "stm32f411", "defmt" ] }
stm32-usbd = { version = "0.7.0" }

cortex-m-semihosting = "0.5.0"
rtic = { version = "2.2.0", features = [ "thumbv7-backend" ] }
nb = "1.1.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
usbd-ethernet = { version = "0.4.0", features = [ "defmt" ] }
rtic-monotonics = { version = "2.0.3", features = [ "stm32_tim2", "stm32-metapac", "stm32f411ce", "defmt" ]}
rtic-sync = { version = "1.4.0", features = ["defmt-03" ]}
heapless = { version = "0.8", features = [ "defmt-03"] }
futures = { version = "0.3.31", default-features = false, features=["async-await"] }
smoltcp = { version = "0.12", default-features = false, features = [
    "defmt",
    "socket-tcp",
    "socket-dhcpv4",
    "proto-ipv4",
] }

micropb = { version = "0.3.0", features = ["container-heapless"] }
cobs = { version = "0.4.0",  default-features = false, features = [ "defmt" ] }
never = { version = "0.1.0", default-features = false }
micromath = "2.1.0"
fugit = "0.3.7"
sha2 = { version="0.10.9", default-features = false }

[build-dependencies]
micropb-gen = "0.3.0"

# this lets you use `cargo fix`!
[[bin]]
name = "ant-auxiliary"
test = false
bench = false

